@startuml

title __ZORKGAME_JAVA's Class Diagram__\n

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Command {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.CommandWords {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Game {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Item {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Main {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Parser {
    }
  }
  

  namespace ch.noseryoung.plj {
    class ch.noseryoung.plj.Room {
    }
  }
  

  namespace ch.noseryoung.plj {
    namespace creature {
      class ch.noseryoung.plj.creature.BadCreature {
      }
    }
  }
  

  namespace ch.noseryoung.plj {
    namespace creature {
      class ch.noseryoung.plj.creature.Creature {
      }
    }
  }
  

  namespace ch.noseryoung.plj {
    namespace creature {
      class ch.noseryoung.plj.creature.GoodCreature {
      }
    }
  }
  

  ch.noseryoung.plj.Game o-- ch.noseryoung.plj.Room : currentRoom
  ch.noseryoung.plj.Game o-- ch.noseryoung.plj.Parser : parser
  ch.noseryoung.plj.Parser o-- ch.noseryoung.plj.CommandWords : commands
  ch.noseryoung.plj.Room o-- ch.noseryoung.plj.creature.Creature : creature
  ch.noseryoung.plj.creature.BadCreature -up-|> ch.noseryoung.plj.creature.Creature
  ch.noseryoung.plj.creature.BadCreature o-- ch.noseryoung.plj.Item : defeatItem
  ch.noseryoung.plj.creature.GoodCreature -up-|> ch.noseryoung.plj.creature.Creature


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
